# skill2workflow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HARNESS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: authoring.md  connectors.md  credential-boundary.md  examples.md  first-product-connector-candidate.md  lark-live-connector-readiness.md  pilot-playbook.md  release-process.md  runtime-policy.md  stability.md  triggers.md  workflow-dsl-compatibility.md  workflow-dsl-contract.md
examples/: control-plane-snapshot.json
schemas/: workflow.schema.json
scripts/: demo_bootstrap.py  external_connector_smoke.py  lark_task_connector_smoke.py  lark_task_pilot_smoke.py  package_smoke.py  pilot_playbook_smoke.py  pilot_scenario_pack_smoke.py  release_preflight.py  schedule_smoke.py  secret_hygiene.py
tests/: test_cli.py  test_compiler.py  test_connector_package_docs.py  test_connectors.py  test_control_plane.py  test_credentials.py  test_dashboard.py  test_demo.py  test_dsl_contract.py  test_examples.py  test_executor.py  test_external_connector_smoke.py  test_first_product_connector_candidate_docs.py  test_lark_task_connector.py  test_lark_task_connector_smoke.py  test_lark_task_pilot.py  test_live_connector_readiness.py  test_packaging.py  test_parser.py  test_pilot.py  test_pilot_scenarios.py  test_product_connector_pilot_roadmap.py  test_production_roadmap.py  test_release_preflight.py  test_schedules.py  test_secret_hygiene.py  test_storage.py  test_triggers.py  test_visualizer.py  test_webhooks.py
web/: app.js  control.css  control.html  control.js  index.html  (+1 more)
(+79 files in other folders)
